src/objects/INT_Bitacora__c.object
<CustomObject>
    <description>Representa el registro histórico de integraciones entre Salesforce y otros sistemas de forma que se puedan monitorizar los estados de los envíos y los errores obtenidos.</description>
    <fields>
        <fullName>BIT_FOR_Id_Fichero__c</fullName>
        <formula>BIT_LKP_Envio_Programado_CIA__r.ENV_LKP_Fichero__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Fichero</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Compania__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bitacora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Envio_Programado_CIA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Envío Programado CIA</label>
        <referenceTo>INT_Envio_Programado__c</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Registro_caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registro de caso que falla en una integración</description>
        <label>Registro no integrado caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bitacora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Registro_contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registro de contacto que falla en una integración</description>
        <label>Registro no integrado contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Registro_cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registro de compañia/cliente/profesional que falla en una integración</description>
        <label>Registro no integrado cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integraciones: Bitácora (Registro no integrado cuenta)</relationshipLabel>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Registro_factura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registro de factura que falla en una integración</description>
        <label>Registro no integrado factura</label>
        <referenceTo>Factura__c</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Registro_orden__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Registro de orden de trabajo que falla en una integración</description>
        <label>Registro no integrado orden</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Integraciones: Bitácora</relationshipLabel>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_LKP_Id_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup al Id de usuario para el Callout de CPQ</description>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integraciones_Bit_cora</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIT_NUM_Lote__c</fullName>
        <description>Indica el número de lote de envío</description>
        <label>Lote</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIT_NUM_Orden_RGA__c</fullName>
        <description>Orden de integración de llamadas a RGA. Debido a la casuística concreta de este sistema que no está operativo las 24 horas de la semana, es necesario indicar el orden de las llamadas.</description>
        <label>Orden RGA</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIT_NUM_Reintentos__c</fullName>
        <description>Contador de reintentos realizados tras la integración errónea contra un sistema tercero.</description>
        <label>Reintentos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIT_SEL_Estado__c</fullName>
        <description>Indica el estado del movimiento</description>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Bitacora</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIT_SEL_Tipo_Integracion__c</fullName>
        <description>Tipo de integración para el registro en la bitácora</description>
        <label>Tipo de Integración</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Integracion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIT_TXT_EndPoint__c</fullName>
        <description>Almacenamos el EndPoint del servicio web del tercero (PSI) para poder tener almacenada la información y se pueda recuperar en la lógica que se va a implementar de re intentos.</description>
        <label>EndPoint</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Error__c</fullName>
        <description>Indica los errores en el envío del movimiento</description>
        <label>Error</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Id_Secuencia_Indemnizables__c</fullName>
        <description>Campo para almacenar el identificador de la secuencia devuelva por Previsora.</description>
        <label>Secuencia Previsora</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Json__c</fullName>
        <description>Campo que almacena el Json con la información de la petición que se le va a enviar al sistema tercero. Con este campo tendremos la posibilidad de revisar la información de salida y poder depurar.</description>
        <label>Json</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Method__c</fullName>
        <description>El tipo de operación a realizar en la invocación de callouts por reintento.</description>
        <label>Método</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Nombre_Fichero__c</fullName>
        <description>Nombre del fichero enviado</description>
        <label>Nombre del Fichero</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Nombre_Integracion__c</fullName>
        <description>Será necesario introducir el código de la integración de negocio que ha fallado</description>
        <label>Nombre Integración Web</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_TXT_Sistema_externo__c</fullName>
        <description>Nombre literal del sistema externo al que va dirigida un callout.</description>
        <label>Sistema externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Bitácora</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BIT_SEL_Tipo_Integracion__c</columns>
        <columns>BIT_NUM_Lote__c</columns>
        <columns>BIT_SEL_Estado__c</columns>
        <columns>BIT_TXT_Error__c</columns>
        <columns>BIT_TXT_Nombre_Fichero__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Pablo</value>
        </filters>
        <label>Busqueda</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Bitacora_Ficheros</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BIT_LKP_Compania__c</columns>
        <columns>BIT_SEL_Estado__c</columns>
        <columns>BIT_TXT_Error__c</columns>
        <columns>BIT_LKP_Envio_Programado_CIA__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>INT_Bitacora__c.Fichero</value>
        </filters>
        <label>Bitácora Ficheros</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>BIT{000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones: Bitácora</pluralLabel>
    <recordTypes>
        <fullName>Fichero</fullName>
        <active>true</active>
        <description>Registros de integraciones por fichero</description>
        <label>Fichero</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servicio_Web</fullName>
        <active>true</active>
        <description>Registros de integraciones web</description>
        <label>Servicio Web</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>